# BOT-Exchange-Rates

./: .env  .env.example  .env_hindsight  .gitignore  BOT_Exchange_Rate_v2.4.0_MAC.spec  CLAUDE.md  Dockerfile  LICENSE  README.md  RELEASE_SMOKE.md  bot_acc_filler.py  bot_acc_filler_gui.py  bot_core.py  bot_excel_report.py  bot_generator.py  config.json  get_bot.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh  run_windows.bat  setup.bat  setup.sh  test_api.py
.agents/workflows/: build.md  release.md  test.md
.github/workflows/: ci.yml  v3-release.yml
bot_acc_filler_app/: bot_acc_filler.py  bot_acc_filler_gui.py
bot_acc_filler_app/web/: app.py  requirements.txt
bot_acc_filler_app/web/static/: app.js  style.css
bot_acc_filler_app/web/templates/: index.html
core/: __init__.py  anomaly_guard.py  api_client.py  audit_logger.py  auto_updater.py  backup_manager.py  com_engine.py  config_manager.py  constants.py  csv_export.py  csv_import.py  currency_registry.py  database.py  engine.py  engine_factory.py  enterprise.py  excel_io.py  exrate_sheet.py  exrate_updater.py  i18n.py  ipc.py  ledger_processing.py  logic.py  paths.py  prescan.py  rate_audit.py  scheduler.py  secure_tokens.py  version.py  workbook_io.py  xls_converter.py
core/workers/: event_bus.py  thread_registry.py
data/: settings.json
data/input/: .~lock.exchange_rate_file_sample.xlsx#  UAT_Test_Ledger.xlsx
data/output/: BOT_Exchange_rates.db  BOT_Exchange_rates.json
docs/: excel_formula_guide.md  manual_exchange_rate_process.md
gui/: __init__.py  app.py  handlers.py  os_open.py  theme.py  theme_applicator.py
gui/panels/: _base_panel.py  _path_chooser.py  backup_browser.py  control_panel.py  csv_panel.py  exrate_config_dialog.py  exrate_dialog.py  live_console.py  rate_audit_dialog.py  rate_ticker.py  scheduler_panel.py  settings_modal.py  token_dialog.py  tray_manager.py  update_banner.py  version_browser.py  version_panel.py
installer/: installer.iss
scripts/: build_windows.bat  install-hooks.sh  pre-push
tests/: __init__.py  conftest.py  test_anomaly_guard.py  test_api_client.py  test_api_live.py  test_api_retry.py  test_audit_logger.py  test_auto_updater.py  test_backup_manager.py  test_config_manager.py  test_constants.py  test_csv_export.py  test_csv_import.py  test_csv_negative.py  test_csv_roundtrip.py  test_database.py  test_engine.py  test_engine_factory.py  test_engine_multicurrency.py  test_enterprise.py  test_event_bus.py  test_excel_io.py  test_exrate_sheet.py  test_financial_invariants.py  test_golden_master.py  test_gui_workers.py  test_handlers.py  test_i18n.py  test_ipc.py  test_ledger_processing.py  test_logic.py  test_main.py  test_paths.py  test_prescan.py  test_rate_audit.py  test_rate_audit_run.py  test_scheduler.py  test_secure_tokens.py  test_theme_contrast.py  test_thread_registry.py  (+1 more)
tests/golden/: __init__.py  build_fixtures.py  expected_ledger_audit.json  expected_ledger_exrate.json  expected_ledger_formulas.json  expected_realistic_audit.json  expected_realistic_exrate.json  expected_realistic_formulas.json  expected_standalone_exrate.json
tests/gui/: test__base_panel.py  test__path_chooser.py  test_app.py  test_app_batch_state.py  test_app_shutdown.py  test_backup_browser.py  test_control_panel.py  test_csv_panel.py  test_exrate_dialog.py  test_handlers_cancel.py  test_i18n_gui.py  test_live_console.py  test_rate_audit_dialog.py  test_rate_ticker.py  test_scheduler_panel.py  test_settings_modal.py  test_theme.py  test_theme_applicator.py  test_token_dialog.py  test_tray_manager.py  test_update_banner.py  test_version_panel.py  test_worker_registration.py
