[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}

[tool.setuptools.packages.find]
include = ["core*", "gui*"]

[project]
name = "bot-exrate"
dynamic = ["version"]
description = "BOT Exchange Rate Processor — Enterprise Desktop Application"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tkinterdnd2-universal>=1.7.3",
    "packaging>=24.0",
    "keyring>=25.7.0",
    "pystray>=0.19.5; sys_platform == 'win32'",
    "Pillow>=10.0.0; sys_platform == 'win32'",
    "sentry-sdk>=2.5.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=8.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["scripts/", "data/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
