[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "core.version.__version__"}

[tool.setuptools.packages.find]
include = ["core*", "gui*"]

[project]
name = "bot-exrate"
dynamic = ["version"]
description = "BOT Exchange Rate Processor — Enterprise Desktop Application"
requires-python = ">=3.12"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
dependencies = [
    "customtkinter>=5.2.2",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
    "tenacity>=9.0.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.0.1",
    "tkinterdnd2-universal>=1.7.3",
    "packaging>=26.2",
    "keyring>=25.7.0",
    "pystray>=0.19.5; sys_platform == 'win32'",
    # Pillow is required on all platforms: gui/app.py uses a PIL-based icon
    # fallback (PhotoImage TclError path) that was unreachable on non-Windows
    # while Pillow carried a win32-only marker. pystray (win32) also needs it.
    "Pillow>=12.2.0",
    "sentry-sdk>=2.62.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "pytest>=9.0.0",
    "pip-audit>=2.7.0",
]
# Release-build tooling (PyInstaller bundling + icon generation).
# Installed in CI via: uv sync --no-dev --group build
build = [
    "pyinstaller>=6",
    "pillow",
]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["scripts/", "data/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PTH", "S"]

[tool.ruff.lint.per-file-ignores]
# PTH (pathlib) is enforced on all production code (core/, gui/, main.py).
# Test modules deliberately keep os.path/open style: they never run on the
# 4GB/15MB featherweight target, and many build throwaway tmp paths and assert
# on os.path-derived strings. Converting them adds churn and risk of altering
# assertion semantics (e.g. os.path.basename vs Path.name on trailing-sep
# paths) with zero runtime benefit. Production behavior is unchanged.
"tests/**" = ["PTH", "S101", "S105", "S106", "S108"]
# S101 (assert) is the idiom pytest is built on. S105/S106 (hardcoded
# "password" strings/args) are dummy tokens in fixtures, never real secrets.
# S108 (hardcoded /tmp paths) appears in throwaway temp-path fixtures. None of
# these run on the featherweight target; flagging them adds pure noise.

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "gui: GUI widget tests (require a graphical display)",
]
